--- a/DvachBrowser3/Views/Shell.xaml
+++ b/DvachBrowser3/Views/Shell.xaml
@@ -60,6 +60,12 @@
                 </controls:HamburgerButtonInfo>
             </controls:HamburgerMenu.PrimaryButtons>
             <controls:HamburgerMenu.SecondaryButtons>
+                <controls:HamburgerButtonInfo ClearHistory="True" PageType="local:ConfigPage">
+                    <StackPanel Orientation="Horizontal">
+                        <SymbolIcon Width="48" Height="48" Symbol="Setting" />
+                        <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="Настройки" />
+                    </StackPanel>
+                </controls:HamburgerButtonInfo>
                 <controls:HamburgerButtonInfo ClearHistory="True" PageType="local:WebShowPage">
                     <StackPanel Orientation="Horizontal">
                         <SymbolIcon Width="48" Height="48" Symbol="Flag" />
